# tldr

./: .bumpversion.cfg  Changelog.md  MANIFEST.in  Makefile  README.md  app.py  interface.py  pixi.toml  pyproject.toml  requirements.txt  streamlit.py  tldr.py  ui.py
.windsurf/: rules.md
tests/: eval_request.tldr.20250611_055830.txt
tldr.20250618_063206.files/: refined_query.tldr.20250618_063206.txt
tldr.20250618_063240.files/: refined_query.tldr.20250618_063240.txt
tldr.20250618_065215.files/: refined_query.tldr.20250618_065215.txt
tldr.20250626_150911.files/: reference_summaries.tldr.20250626_150911.txt  refined_query.tldr.20250626_150911.txt  research_context.tldr.20250626_150911.txt  research_results.tldr.20250626_150911.txt
tldr.20250627_045138.files/: reference_summaries.tldr.20250627_045138.txt  refined_query.tldr.20250627_045138.txt
tldr.20250627_090953.files/: reference_summaries.tldr.20250627_090953.txt
tldr.20250627_091829.files/: reference_summaries.tldr.20250627_091829.txt
tldr.20250627_092809.files/: reference_summaries.tldr.20250627_092809.txt
tldr.20250627_093242.files/: executive_summary.tldr.20250627_093242.txt  reference_summaries.tldr.20250627_093242.txt
tldr.20250629_063610.files/: context_files.tldr.20250629_063610.txt
tldr.20250629_063818.files/: context_files.tldr.20250629_063818.txt  refined_query.tldr.20250629_063818.txt
tldr.20250629_064052.files/: context_files.tldr.20250629_064052.txt  context_research.tldr.20250629_064052.txt  context_search.tldr.20250629_064052.txt  refined_query.tldr.20250629_064052.txt
(+168 files in other folders)
