[project]
name = "tldr"
version = "0.1.3"
description = "Reads and summarizes top points from a provided series of articles using the OpenAI API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.78.1",
    "python-docx",
    "pypdf2",
    "beautifulsoup4",
    "pillow>=10.2.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.1",
    "black",
]

[project.urls]
Homepage = "https://github.com/mjenior/tldr"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
tldr = "tldr.tldr:main"
